--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "google/apiclient": "^2.18",
-        "phpmailer/phpmailer": "^6.9"
+        "phpmailer/phpmailer": "^6.9",
+        "smalot/pdfparser": "^2.11"
     }
 }
